--- a/Index/前缀和.md
+++ b/Index/前缀和.md
@@ -1,5 +1,6 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
+| [85. 最大矩形](https://leetcode.cn/problems/maximal-rectangle/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximal-rectangle/solution/by-ac_oier-k02i/) | 困难 | 🤩🤩🤩      |
 | [187. 重复的DNA序列](https://leetcode-cn.com/problems/repeated-dna-sequences/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/repeated-dna-sequences/solution/gong-shui-san-xie-yi-ti-shuang-jie-hua-d-30pg/) | 中等 | 🤩🤩🤩🤩     |
 | [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/minimum-size-subarray-sum/solution/by-ac_oier-c5jm/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [238. 除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/) | [LeetCode 题解链接](https://leetcode.cn/problems/product-of-array-except-self/solution/by-ac_oier-fqp3/) | 中等 | 🤩🤩🤩🤩🤩    |
