--- a/LeetCode/11-20/11. 盛最多水的容器（中等）.md
+++ b/LeetCode/11-20/11. 盛最多水的容器（中等）.md
@@ -51,33 +51,7 @@ Tag : 「双指针」、「贪心」
 * $0 <= height[i] <= 3 \times 10^4$
 
 ---
-### 朴素解法
 
-我们可以直接枚举所有的情况：先枚举确定左边界，再往右枚举确定右边界。
-
-然后再记录枚举过程中的最大面积即可：
-
-代码：
-```Java
-class Solution {
-    public int maxArea(int[] height) {
-        int n = height.length;
-        int ans = 0;
-        for (int i = 0; i < n; i++) {
-            for (int j = i + 1; j < n; j++) {
-                int w = j - i;
-                int h = Math.min(height[i], height[j]);
-                ans = Math.max(w * h, ans);
-            }
-        }
-        return ans;
-    }
-}
-```
-* 时间复杂度：$O(n^2)$
-* 空间复杂度：$O(1)$
-
----
 ### 双指针 + 贪心
 
 先用两个指针 `i` 和 `j` 指向左右边界，然后考虑指针应该怎么移动。
@@ -104,16 +78,12 @@ class Solution {
 ```Java
 class Solution {
     public int maxArea(int[] height) {
-        int n = height.length;
+        int n = height.length, ans = 0;
         int i = 0, j = n - 1;
-        int ans = 0;
         while (i < j) {
             ans = Math.max(ans, (j - i) * Math.min(height[i], height[j]));
-            if (height[i] < height[j]) {
-                i++;
-            } else {
-                j--;
-            }
+            if (height[i] < height[j]) i++;
+            else j--;
         }
         return ans;
     }
