--- a/LeetCode/31-40/31. 下一个排列（中等）.md
+++ b/LeetCode/31-40/31. 下一个排列（中等）.md
@@ -44,9 +44,9 @@ Tag : 「模拟」、「数学」
 
 ---
 
-### 朴素解法
+### 模拟
 
-找下一个排列的数。大家可以先想想大脑来是怎么完成这个找数的过程的。
+找下一个排列的数，大家可以先想想大脑来是怎么完成这个找数的过程的。
 
 **我们会尽可能的将低位的数字变大，这样才符合「下一个排列」的定义。**
 
@@ -80,8 +80,7 @@ Tag : 「模拟」、「数学」
 ```Java
 class Solution {
     public void nextPermutation(int[] nums) {
-        int n = nums.length;
-        int k = n - 1;
+        int n = nums.length, k = n - 1;
         while (k - 1 >= 0 && nums[k - 1] >= nums[k]) k--;
         if (k == 0) {
             reverse(nums, 0, n - 1);
@@ -94,9 +93,7 @@ class Solution {
     }
     void reverse(int[] nums, int a, int b) {
         int l = a, r = b;
-        while (l < r) {
-            swap(nums, l++, r--);
-        }
+        while (l < r) swap(nums, l++, r--);
     }
     void swap(int[] nums, int a, int b) {
         int c = nums[a];
@@ -105,7 +102,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：对数组线性遍历。复杂度为 $O(n)$
+* 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
 
 ---
