--- a/LeetCode/面试题/面试题 17.19. 消失的两个数字（困难）.md
+++ b/LeetCode/面试题/面试题 17.19. 消失的两个数字（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[面试题 17.19. 消失的两个数字](https://leetcode.cn/problems/missing-two-lcci/solution/by-ac_oier-pgeh/)** ，难度为 **困难**。
 
-Tag : 「数学」
+Tag : 「数学」、「位运算」
 
 
 
@@ -72,6 +72,78 @@ class Solution:
         tot, t = cur, cur // 2
         cur = t * (1 + t) // 2 - sum([x for x in nums if x <= t])
         return [cur, tot - cur]
+```
+* 时间复杂度：$O(n)$
+* 空间复杂度：$O(1)$
+
+---
+
+### 异或
+
+另外一类求解方法是利用「异或」+「lowbit」。
+
+由于我们明确了是在 $[1, n + 2]$ 中缺失了两个数，我们可以先通过异或 $[1, n + 2]$ 以及所有的 $nums[i]$ 来得到缺失两个数值异或和 `t`。
+
+我们知道异或结果二进制表示为 $1$ 代表了两缺失值该位置数值不同（一个该位置 $0$，另一个该位置为 $1$），我们可以根据异或和 `t` 中任意一位为 $1$ 的位置来将两个缺失值划分到两组中。
+
+更加优雅的方式是使用 `lowbit` 操作：`d = t & -t` 可快速得到只保留 `t` 中最低位 `1` 的对应数值。
+
+随后将 $[1, n + 2]$ 中满足 `i & d != 0` 的所有 `i`（含义为对应位置为 $1$ 的数值）与 $nums[i]$ 中满足 `nums[i] & d != 0` 的所有 $nums[i]$（含义为对应位置为 $1$ 的数值） 进行异或，最终能够确定其中一个缺失值，再结合最开始的异或和 `t` 即可确定另外一个缺失值。
+
+Java 代码：
+```Java 
+class Solution {
+    public int[] missingTwo(int[] nums) {
+        int n = nums.length + 2, cur = 0;
+        for (int i = 1; i <= n; i++) cur ^= i;
+        for (int x : nums) cur ^= x;
+        int t = cur, d = cur & -cur;
+        cur = 0;
+        for (int i = 1; i <= n; i++) {
+            if ((d & i) != 0) cur ^= i;
+        }
+        for (int x : nums) {
+            if ((d & x) != 0) cur ^= x;
+        }
+        return new int[]{cur, t ^ cur};
+    }
+}
+```
+TypeScript 代码：
+```TypeScript 
+function missingTwo(nums: number[]): number[] {
+    let n = nums.length + 2, cur = 0
+    for (let i = 1; i <= n; i++) cur ^= i
+    for (let x of nums) cur ^= x
+    const t = cur, d = cur & -cur
+    cur = 0
+    for (let i = 1; i <= n; i++) {
+        if ((d & i) != 0) cur ^= i
+    }
+    for (let x of nums) {
+        if ((d & x) != 0) cur ^= x
+    }
+    return [cur, t ^ cur]
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def missingTwo(self, nums: List[int]) -> List[int]:
+        n, cur = len(nums) + 2, 0
+        for i in range(1, n + 1):
+            cur ^= i
+        for x in nums:
+            cur ^= x
+        t, d = cur, cur & -cur
+        cur = 0
+        for i in range(1, n + 1):
+            if d & i:
+                cur ^= i
+        for x in nums:
+            if d & x:
+                cur ^= x
+        return [cur, t ^ cur]
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
