--- a/LeetCode/81-90/85. 最大矩形（困难）.md
+++ b/LeetCode/81-90/85. 最大矩形（困难）.md
@@ -74,7 +74,7 @@ Tag : 「单调栈」、「前缀和」
 $$
 sum[i][j] = \begin{cases}
 0 & mat[i][j] = 0 \\
-sum[i - 1][j] & mat[i][j] = 1 \\
+sum[i - 1][j] + 1 & mat[i][j] = 1 \\
 \end{cases}
 $$
 
