--- a/Index/原地哈希.md
+++ b/Index/原地哈希.md
@@ -1,5 +1,7 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
+| [41. 缺失的第一个正数](https://leetcode.cn/problems/first-missing-positive/) | [LeetCode 题解链接](https://leetcode.cn/problems/first-missing-positive/solution/yan-ge-on-de-tong-pai-xu-si-lu-yi-ji-wei-wm8d/) | 困难 | 🤩🤩🤩🤩🤩    |
+| [287. 寻找重复数](https://leetcode.cn/problems/find-the-duplicate-number/) | [LeetCode 题解链接](https://leetcode.cn/problems/find-the-duplicate-number/solution/by-ac_oier-az8v/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [442. 数组中重复的数据](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/solution/by-ac_oier-0m3c/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/solution/li-yong-tong-pai-xu-de-si-lu-ni-huan-ke-e3t4w/) | 简单 | 🤩🤩🤩🤩🤩    |
 
