--- a/LeetCode/41-50/41. 缺失的第一个正数（困难）.md
+++ b/LeetCode/41-50/41. 缺失的第一个正数（困难）.md
@@ -2,15 +2,13 @@
 
 这是 LeetCode 上的 **[41. 缺失的第一个正数](https://leetcode-cn.com/problems/first-missing-positive/solution/yan-ge-on-de-tong-pai-xu-si-lu-yi-ji-wei-wm8d/)** ，难度为 **困难**。
 
-Tag : 「桶排序」
+Tag : 「桶排序」、「原地哈希」
 
 
 
-给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
+给你一个未排序的整数数组 `nums` ，请你找出其中没有出现的最小的正整数。
 
- **进阶**：你可以实现时间复杂度为 O(n) 并且只使用常数级别额外空间的解决方案吗？
-
- 
+ **进阶**：你可以实现时间复杂度为 $O(n)$ 并且只使用常数级别额外空间的解决方案吗？ 
 
 示例 1：
 ```
@@ -32,12 +30,12 @@ Tag : 「桶排序」
 ```
 
 提示：
-* 0 <= nums.length <= 300
-* -$2^{31}$ <= nums[i] <= $2^{31}$ - 1
+* $0 <= nums.length <= 300$
+* $-2^{31} <= nums[i] <= 2^{31} - 1$
 
 ---
 
-### 桶排序
+### 桶排序（原地哈希）
 
 令数组长度为 `n`，那么答案必然在 `[1, n + 1]` 范围内。
 
@@ -80,42 +78,9 @@ class Solution {
 
 ---
 
-### 实战技巧
-
-还记得最早我在 [4. 寻找两个正序数组的中位数](https://mp.weixin.qq.com/s/BUjjFgsSEz5ZpT7_qe24Ww) 跟你说过，对于一些从文字上限制我们的题目，我们应该如何分析能否采用别的做法来 AC。
-
-这对于比赛和机试，这种要求我们尽快 AC 的场景来说，尤为重要。
-
-总的来说，你可以根据**直观解法的时空复杂度**、**文字限制的时空复杂度**和**数据范围**等几个方面来判断。
-
-对于本题而言，我们可以很容易想到先排序，再遍历的做法：
-
-排序的复杂度为 $O(n\log{n})$；找答案的过程需要枚举 `[1, n]`，然后通过「二分」找当前的枚举值是否在排序数据中，复杂度为 $O(n\log{n})$。因此整体复杂度为 $O(n\log{n})$。
-
-而文字要求我们使用 $O(n)$ 复杂度的解法。这时候我们基本上可以不看数据范围就可以确定 $O(n\log{n})$ 能做。
-
-因为 $O(n\log{n})$ 和 $O(n)$ 并没有差多少，哪怕数据范围出到极限 $10^7$。$log{10^7}$ = 23，数值非常小，$O(n\log{n})$ 可以等效看做一个常数计算为 23 的 $O(n)$ 解法。何况本题的数据范围只有 300，可以说怎么做都行。
-
-$O(n\log{n})$ 解法代码：
-```java
-class Solution {
-    public int firstMissingPositive(int[] nums) {
-        Arrays.sort(nums);
-        int n = nums.length;
-        for (int i = 1; i <= n; i++) {
-            if (Arrays.binarySearch(nums, i) < 0) return i;
-        }
-        return n + 1;
-    }
-}
-```
-你会发现，在 LeetCode 上 $O(n\log{n})$ 解法和 $O(n)$ 解法的执行用时没有差别。
-
----
-
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.41` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
