--- a/LeetCode/281-290/287. 寻找重复数（中等）.md
+++ b/LeetCode/281-290/287. 寻找重复数（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[287. 寻找重复数](https://leetcode.cn/problems/find-the-duplicate-number/solution/by-ac_oier-az8v/)** ，难度为 **中等**。
 
-Tag : 「原地哈希」
+Tag : 「桶排序」、「原地哈希」
 
 
 
