--- a/Index/贪心算法.md
+++ b/Index/贪心算法.md
@@ -21,6 +21,7 @@
 | [768. 最多能完成排序的块 II](https://leetcode.cn/problems/max-chunks-to-make-sorted-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/max-chunks-to-make-sorted-ii/solution/by-ac_oier-z4wt/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [781. 森林中的兔子](https://leetcode-cn.com/problems/rabbits-in-forest/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/rabbits-in-forest/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-v17p5/) | 中等 | 🤩🤩🤩🤩     |
 | [807. 保持城市天际线](https://leetcode-cn.com/problems/max-increase-to-keep-city-skyline/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/max-increase-to-keep-city-skyline/solution/gong-shui-san-xie-jian-dan-tan-xin-yun-y-2f47/) | 中等 | 🤩🤩🤩🤩     |
+| [870. 优势洗牌](https://leetcode.cn/problems/advantage-shuffle/) | [LeetCode 题解链接](https://leetcode.cn/problems/advantage-shuffle/solution/by-ac_oier-i01s/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [871. 最低加油次数](https://leetcode.cn/problems/minimum-number-of-refueling-stops/) | [LeetCode 题解链接](https://leetcode.cn/problems/minimum-number-of-refueling-stops/solution/by-ac_oier-q2mk/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [881. 救生艇](https://leetcode-cn.com/problems/boats-to-save-people/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/boats-to-save-people/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-hosg8/) | 中等 | 🤩🤩🤩🤩     |
 | [926. 将字符串翻转到单调递增](https://leetcode.cn/problems/flip-string-to-monotone-increasing/) | [LeetCode 题解链接](https://leetcode.cn/problems/flip-string-to-monotone-increasing/solution/by-ac_oier-h0we/) | 中等 | 🤩🤩🤩🤩     |
