--- a/LeetCode/431-440/437. 路径总和 III（中等）.md
+++ b/LeetCode/431-440/437. 路径总和 III（中等）.md
@@ -4,7 +4,9 @@
 
 Tag : 「DFS」、「树的遍历」、「前缀和」
 
-给定一个二叉树的根节点 root ，和一个整数 targetSum ，求该二叉树里节点值之和等于 targetSum 的 路径 的数目。
+
+
+给定一个二叉树的根节点 `root` ，和一个整数 `targetSum`，求该二叉树里节点值之和等于 `targetSum` 的 路径 的数目。
 
 路径 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。
 
@@ -26,8 +28,8 @@ Tag : 「DFS」、「树的遍历」、「前缀和」
 
 提示:
 * 二叉树的节点个数的范围是 [0,1000]
-* -$10^9$ <= Node.val <= $10^9$ 
-* -1000 <= targetSum <= 1000 
+* $-10^9 <= Node.val <= 10^9$ 
+* $-1000 <= targetSum <= 1000$
 
 ---
 
@@ -54,7 +56,7 @@ class Solution {
         dfs1(root.left);
         dfs1(root.right);
     }
-    void dfs2(TreeNode root, int val) {
+    void dfs2(TreeNode root, long val) {
         if (val == t) ans++;
         if (root.left != null) dfs2(root.left, val + root.left.val);
         if (root.right != null) dfs2(root.right, val + root.right.val);
@@ -81,16 +83,16 @@ class Solution {
 代码：
 ```Java
 class Solution {
-    Map<Integer, Integer> map = new HashMap<>();
+    Map<Long, Integer> map = new HashMap<>();
     int ans, t;
     public int pathSum(TreeNode root, int _t) {
         if (root == null) return 0;
         t = _t;
-        map.put(0, 1);
+        map.put(0L, 1);
         dfs(root, root.val);
         return ans;
     }
-    void dfs(TreeNode root, int val) {
+    void dfs(TreeNode root, long val) {
         if (map.containsKey(val - t)) ans += map.get(val - t);
         map.put(val, map.getOrDefault(val, 0) + 1);
         if (root.left != null) dfs(root.left, val + root.left.val);
