--- a/LeetCode/11-20/19. 删除链表的倒数第 N 个结点（中等）.md
+++ b/LeetCode/11-20/19. 删除链表的倒数第 N 个结点（中等）.md
@@ -58,17 +58,13 @@ Tag : 「链表」、「快慢指针」、「双指针」
 class Solution {
     public ListNode removeNthFromEnd(ListNode head, int n) {
         if (head.next == null) return null;
-
-        ListNode slow = head;
-        ListNode fast = head;
+        ListNode slow = head, fast = head;
         while (n-- > 0) fast = fast.next;
-            
         if (fast == null) {
             head = slow.next;
         } else {
             while (fast.next != null) {
-                slow = slow.next;
-                fast = fast.next;
+                slow = slow.next; fast = fast.next;
             }
             slow.next = slow.next.next;
         }
