--- a/LeetCode/21-30/23. 合并K个升序链表（困难）.md
+++ b/LeetCode/21-30/23. 合并K个升序链表（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[23. 合并K个升序链表](https://leetcode-cn.com/problems/merge-k-sorted-lists/solution/shua-chuan-lc-you-xian-dui-lie-jie-fa-sh-3flb/)** ，难度为 **中等**。
 
-Tag : 「优先队列（堆）」、「链表」
+Tag : 「优先队列（堆）」、「链表」、「多路归并」
 
 
 
@@ -49,9 +49,7 @@ Tag : 「优先队列（堆）」、「链表」
 
 ---
 
-### 优先队列（哨兵技巧）
-
-哨兵技巧我们在前面的多道链表题讲过，让三叶来帮你回忆一下：
+### 多路归并 + 优先队列
 
 **做有关链表的题目，有个常用技巧：添加一个虚拟头结点（哨兵），帮助简化边界情况的判断。**
 
@@ -59,14 +57,14 @@ Tag : 「优先队列（堆）」、「链表」
 
 对应到代码的话，相当于我们需要准备一个「集合」，将所有链表的头结点放入「集合」，然后每次都从「集合」中挑出最小值，并将最小值的下一个节点添加进「集合」（如果有的话），循环这个过程，直到「集合」为空（说明所有节点都处理完，进过集合又从集合中出来）。
 
-而「堆」则是满足这样要求的数据结构。
+优先队列（堆）则是满足这样要求的数据结构，而整个过程其实就是「多路归并」过程。
 
 代码：
 ```Java
 class Solution {
     public ListNode mergeKLists(ListNode[] lists) {
         ListNode dummy = new ListNode(-1), tail = dummy;
-        PriorityQueue<ListNode> q = new PriorityQueue<>((a, b) -> a.val - b.val);
+        PriorityQueue<ListNode> q = new PriorityQueue<>((a,b)->a.val-b.val);
         for (ListNode node : lists) {
             if (node != null) q.add(node);
         }
@@ -80,7 +78,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：会将每个节点处理一遍。复杂度为 $O(n)$
+* 时间复杂度：假设共有 $k$ 条建表，共 $n$ 个节点，复杂度为 $O(n\log{k})$
 * 空间复杂度：$O(1)$
 
 ---
