--- a/LeetCode/1781-1790/1790. 仅执行一次字符串交换能否使两个字符串相等（简单）.md
+++ b/LeetCode/1781-1790/1790. 仅执行一次字符串交换能否使两个字符串相等（简单）.md
@@ -63,8 +63,8 @@ class Solution {
             else if (b == -1) b = i;
             else return false;
         }
-        if (a == b && b == -1) return true;
-        if (a == -1 || b == -1) return false;
+        if (a == -1) return true;
+        if (b == -1) return false;
         return s1.charAt(a) == s2.charAt(b) && s1.charAt(b) == s2.charAt(a);
     }
 }
@@ -79,8 +79,8 @@ function areAlmostEqual(s1: string, s2: string): boolean {
         else if (b == -1) b = i
         else return false
     }
-    if (a == -1 && b == -1) return true
-    if (a == -1 || b == -1) return false
+    if (a == -1) return true
+    if (b == -1) return false
     return s1[a] == s2[b] && s1[b] == s2[a]
 }
 ```
@@ -98,9 +98,9 @@ class Solution:
                 b = i
             else:
                 return False
-        if a == b == -1:
+        if a == -1:
             return True
-        if a == -1 or b == -1:
+        if b == -1:
             return False
         return s1[a] == s2[b] and s1[b] == s2[a]
 ```
