--- a/LeetCode/31-40/39. 组合总和（中等）.md
+++ b/LeetCode/31-40/39. 组合总和（中等）.md
@@ -6,13 +6,12 @@ Tag : 「回溯算法」、「DFS」、「组合总和问题」
 
 
 
+给定一个无重复元素的数组 `candidates` 和一个目标数 `target` ，找出 `candidates` 中所有可以使数字和为 `target` 的组合。
 
-给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
-
-candidates 中的数字可以无限制重复被选取。
+`candidates` 中的数字可以无限制重复被选取。
 
 说明：
-* 所有数字（包括 target）都是正整数。
+* 所有数字（包括 `target`）都是正整数。
 * 解集不能包含重复的组合。 
 
 示例 1：
@@ -38,29 +37,26 @@ candidates 中的数字可以无限制重复被选取。
 ```
 
 提示：
-* 1 <= candidates.length <= 30
-* 1 <= candidates[i] <= 200
-* candidate 中的每个元素都是独一无二的。
-* 1 <= target <= 500
-
+* $1 <= candidates.length <= 30$
+* $1 <= candidates[i] <= 200$
+* `candidate` 中的每个元素都是独一无二的。
+* $1 <= target <= 500$
 
 ---
 
-### DFS + 回溯
+### DFS
 
 这道题很明显就是在考察回溯算法。
 
-还记得三叶之前跟你分享过的 [37. 解数独（困难）](https://mp.weixin.qq.com/s/0y4lGAH43U3w5loTgaeyoQ) 吗？
-
-里面有提到我们应该如何快速判断一道题是否应该使用 DFS + 回溯算法来爆搜。
+之前跟你分享过的 [37. 解数独（困难）](https://mp.weixin.qq.com/s/0y4lGAH43U3w5loTgaeyoQ) 里面有提到我们应该如何快速判断一道题是否应该使用 DFS + 回溯算法来爆搜。
 
 总的来说，你可以从两个方面来考虑：
 
   * **1. 求的是所有的方案，而不是方案数。** 由于求的是所有方案，不可能有什么特别的优化，我们只能进行枚举。这时候可能的解法有动态规划、记忆化搜索、DFS + 回溯算法。
 
-  * **2. 通常数据范围不会太大，只有几十。** 如果是动态规划或是记忆化搜索的题的话，由于它们的特点在于低重复/不重复枚举，所以一般数据范围可以出到 $10^5$ 到 $10^7$，而 DFS + 回溯的话，通常会限制在 30 以内。
+  * **2. 通常数据范围不会太大，只有几十。** 如果是动态规划或是记忆化搜索的题的话，由于它们的特点在于低重复/不重复枚举，所以一般数据范围可以出到 $10^4$ 到 $10^5$，而 DFS + 回溯的话，通常会限制在 $30$ 以内。
 
-这道题数据范围是 30 以内，而且是求所有方案，因此我们使用 DFS + 回溯来求解。
+这道题数据范围是 $30$ 以内，而且是求所有方案，因此我们使用 DFS + 回溯来求解。
 
 代码：
 ```Java
@@ -71,7 +67,6 @@ class Solution {
         dfs(cs, t, 0, ans, cur);
         return ans;
     }
-
     /**
      * cs: 原数组，从该数组进行选数
      * t: 还剩多少值需要凑成。起始值为 target ，代表还没选择任何数；当 t = 0，代表选择的数凑成了 target
@@ -86,7 +81,7 @@ class Solution {
         }
         if (u == cs.length || t < 0) return;
 
-        // 枚举 cs[u] 的使用次数w
+        // 枚举 cs[u] 的使用次数
         for (int i = 0; cs[u] * i <= t; i++) {
             dfs(cs, t - cs[u] * i, u + 1, ans, cur);
             cur.add(cs[u]);
@@ -98,9 +93,9 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：由于每个数字的使用次数不确定，因此无法分析具体的复杂度。但是 DFS 回溯算法通常是指数级别的复杂度（因此数据范围通常为 30 以内）。这里暂定 $O(n \times 2^n)$
-* 空间复杂度：同上。复杂度为 $O(n \times 2^n)$
-
+* 时间复杂度：爆搜通常是指数级别的复杂度
+* 空间复杂度：爆搜通常是指数级别的复杂度
+* 
 ---
 
 ### 最后
