--- a/LeetCode/881-890/886. 可能的二分法（中等）.md
+++ b/LeetCode/881-890/886. 可能的二分法（中等）.md
@@ -95,44 +95,38 @@ class Solution {
 ```
 TypeScript 代码：
 ```TypeScript
-function possibleBipartition(n: number, ds: number[][]): boolean {
-  const N = 2010,
-    M = 2 * 10010;
-  const he = new Array() < number > N,
-    e = new Array() < number > M.fill(0),
-    ne = new Array() < number > M.fill(0),
-    color = new Array() < number > N;
-  let idx = 0;
-  function add(a: number, b: number): void {
-    e[idx] = b;
-    ne[idx] = he[a];
-    he[a] = idx++;
-  }
-  function dfs(u: number, cur: number): boolean {
-    color[u] = cur;
-    for (let i = he[u]; i != -1; i = ne[i]) {
-      const j = e[i];
-      if (color[j] == cur) return false;
-      if (color[j] == 0 && !dfs(j, 3 - cur)) return false;
-    }
-    return true;
-  }
-  he.fill(-1);
-  idx = 0;
-  for (const info of ds) {
-    const a = info[0],
-      b = info[1];
-    add(a, b);
-    add(b, a);
-  }
-  color.fill(0);
-  for (let i = 1; i <= n; i++) {
-    if (color[i] != 0) continue;
-    if (!dfs(i, 1)) return false;
-  }
-  return true;
-}
 
+function possibleBipartition(n: number, ds: number[][]): boolean {
+    const N = 2010, M = 2 * 10010
+    const he = new Array<number>(N), e = new Array<number>(M).fill(0), ne = new Array<number>(M).fill(0), color = new Array<number>(N)
+    let idx = 0
+    function add(a: number, b: number): void {
+        e[idx] = b
+        ne[idx] = he[a]
+        he[a] = idx++
+    }
+    function dfs(u: number, cur: number): boolean {
+        color[u] = cur
+        for (let i = he[u]; i != -1; i = ne[i]) {
+            const j = e[i];
+            if (color[j] == cur) return false
+            if (color[j] == 0 && !dfs(j, 3 - cur)) return false
+        }
+        return true
+    }
+    he.fill(-1)
+    idx = 0
+    for (const info of ds) {
+        const a = info[0], b = info[1]
+        add(a, b); add(b, a)
+    }
+    color.fill(0)
+    for (let i = 1; i <= n; i++) {
+        if (color[i] != 0) continue
+        if (!dfs(i, 1)) return false
+    }
+    return true
+}
 ```
 Python 代码：
 ```Python
@@ -207,27 +201,26 @@ class Solution {
 ```
 TypeScript 代码：
 ```TypeScript
+
 function possibleBipartition(n: number, ds: number[][]): boolean {
-  const p = new Array() < number > (4010).fill(0);
-  function find(x: number): number {
-    if (p[x] != x) p[x] = find(p[x]);
-    return p[x];
-  }
-  function union(a: number, b: number): void {
-    p[find(a)] = p[find(b)];
-  }
-  function query(a: number, b: number): boolean {
-    return find(a) == find(b);
-  }
-  for (let i = 1; i <= 2 * n; i++) p[i] = i;
-  for (const info of ds) {
-    const a = info[0],
-      b = info[1];
-    if (query(a, b)) return false;
-    union(a, b + n);
-    union(b, a + n);
-  }
-  return true;
+    const p = new Array<number>(4010).fill(0)
+    function find(x: number): number {
+        if (p[x] != x) p[x] = find(p[x])
+        return p[x]
+    }
+    function union(a: number, b: number): void {
+        p[find(a)] = p[find(b)]
+    }
+    function query(a: number, b: number): boolean {
+        return find(a) == find(b)
+    }
+    for (let i = 1; i <= 2 * n; i++) p[i] = i
+    for (const info of ds) {
+        const a = info[0], b = info[1]
+        if (query(a, b)) return false
+        union(a, b + n); union(b, a + n)
+    }
+    return true
 }
 
 ```
