--- a/Index/双指针.md
+++ b/Index/双指针.md
@@ -42,6 +42,7 @@
 | [838. 推多米诺](https://leetcode-cn.com/problems/push-dominoes/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/push-dominoes/solution/gong-shui-san-xie-yi-ti-shuang-jie-bfs-y-z52w/) | 中等 | 🤩🤩🤩🤩 |
 | [870. 优势洗牌](https://leetcode.cn/problems/advantage-shuffle/) | [LeetCode 题解链接](https://leetcode.cn/problems/advantage-shuffle/solution/by-ac_oier-i01s/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [881. 救生艇](https://leetcode-cn.com/problems/boats-to-save-people/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/boats-to-save-people/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-hosg8/) | 中等 | 🤩🤩🤩🤩 |
+| [904. 水果成篮](https://leetcode.cn/problems/fruit-into-baskets/) | [LeetCode 题解链接](https://leetcode.cn/problems/fruit-into-baskets/solution/by-ac_oier-skgk/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [905. 按奇偶排序数组](https://leetcode-cn.com/problems/sort-array-by-parity/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/sort-array-by-parity/solution/by-ac_oier-nuz7/) | 简单 | 🤩🤩🤩🤩 |
 | [917. 仅仅反转字母](https://leetcode-cn.com/problems/reverse-only-letters/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reverse-only-letters/solution/gong-shui-san-xie-jian-dan-shuang-zhi-zh-xrpt/) | 简单 | 🤩🤩🤩🤩 |
 | [930. 和相同的二元子数组](https://leetcode-cn.com/problems/binary-subarrays-with-sum/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/binary-subarrays-with-sum/solution/gong-shui-san-xie-yi-ti-shuang-jie-qian-hfoc0/) | 中等 | 🤩🤩🤩 |
