--- a/LeetCode/2021-2030/2024. 考试的最大困扰度（中等）.md
+++ b/LeetCode/2021-2030/2024. 考试的最大困扰度（中等）.md
@@ -45,7 +45,7 @@ Tag : 「滑动窗口」、「双指针」
 
 提示：
 * $n == answerKey.length$
-* $1 <= n <= 5 * 104$
+* $1 <= n <= 5 \times 10^4$
 * $answerKey[i]$ 要么是 `'T'` ，要么是 `'F'`
 * $1 <= k <= n$
 
