--- a/LeetCode/881-890/886. 可能的二分法（中等）.md
+++ b/LeetCode/881-890/886. 可能的二分法（中等）.md
@@ -95,10 +95,9 @@ class Solution {
 ```
 TypeScript 代码：
 ```TypeScript
-
 function possibleBipartition(n: number, ds: number[][]): boolean {
     const N = 2010, M = 2 * 10010
-    const he = new Array<number>(N), e = new Array<number>(M).fill(0), ne = new Array<number>(M).fill(0), color = new Array<number>(N)
+    const he = new Array<number>(N).fill(-1), e = new Array<number>(M).fill(0), ne = new Array<number>(M).fill(0), color = new Array<number>(N).fill(0)
     let idx = 0
     function add(a: number, b: number): void {
         e[idx] = b
@@ -114,13 +113,10 @@ function possibleBipartition(n: number, ds: number[][]): boolean {
         }
         return true
     }
-    he.fill(-1)
-    idx = 0
     for (const info of ds) {
         const a = info[0], b = info[1]
         add(a, b); add(b, a)
     }
-    color.fill(0)
     for (let i = 1; i <= n; i++) {
         if (color[i] != 0) continue
         if (!dfs(i, 1)) return false
@@ -201,7 +197,6 @@ class Solution {
 ```
 TypeScript 代码：
 ```TypeScript
-
 function possibleBipartition(n: number, ds: number[][]): boolean {
     const p = new Array<number>(4010).fill(0)
     function find(x: number): number {
@@ -222,7 +217,6 @@ function possibleBipartition(n: number, ds: number[][]): boolean {
     }
     return true
 }
-
 ```
 Python 代码：
 ```Python
